--- a/source/index.html
+++ b/source/index.html
@@ -390,7 +390,285 @@
 
           <section class="programs">
 
-            <!-- Программы -->
+            <div class="container">
+
+              <div class="programs__top">
+                <h2 class="programs__title">Программы</h2>
+                <a class="programs__link btn btn--main" href="#">
+                  все программы
+                  <span>
+                    <svg aria-hidden="true" focusable="false" width="10" height="10">
+                      <use href="__spritemap#sprite-link"></use>
+                    </svg>
+                  </span>
+                </a>
+              </div>
+
+              <div class="programs__swiper swiper" data-swiper="programs">
+
+                <div class="swiper-wrapper">
+
+                  <!-- Слайд 1 -->
+                  <div class="programs__slide swiper-slide">
+
+                    <div class="programs__image">
+                      <picture>
+                        <source type="image/webp" srcset="img/programs/photo-1.webp 1x, img/programs/photo-1@2x.webp 2x">
+                        <img src="img/programs/photo-1.jpg" srcset="img/programs/photo-1@2x.jpg 2x" width="392" height="420" alt="Фотография девушек">
+                      </picture>
+                    </div>
+
+                    <div class="programs__content">
+                      <div class="programs__subtitle">
+                        <h3>Стажировки</h3>
+                      </div>
+
+                      <div class="programs__wrapper">
+                        <div class="programs__text">
+                          <p>
+                            Получите незаменимый опыт работы в крупнейших мировых компаниях.
+                          </p>
+                        </div>
+                        <a class="programs__btn btn btn--main" href="#">
+                          <span>
+                            <svg aria-label="Перейти на сайт" focusable="false" width="10" height="10">
+                              <use href="__spritemap#sprite-link"></use>
+                            </svg>
+                          </span>
+                        </a>
+                      </div>
+                    </div>
+
+                  </div>
+
+                  <!-- Слайд 2 -->
+                  <div class="programs__slide swiper-slide">
+
+                    <div class="programs__image">
+                      <picture>
+                        <source type="image/webp" srcset="img/programs/photo-2.webp 1x, img/programs/photo-2@2x.webp 2x">
+                        <img src="img/programs/photo-2.jpg" srcset="img/programs/photo-2@2x.jpg 2x" width="392" height="420" alt="Фотография молодого человека">
+                      </picture>
+                    </div>
+
+                    <div class="programs__content">
+                      <div class="programs__subtitle">
+                        <h3>Волонтёрство</h3>
+                      </div>
+
+                      <div class="programs__wrapper">
+                        <div class="programs__text">
+                          <p>
+                            Помогайте другим и развивайте свои лидерские качества.
+                          </p>
+                        </div>
+                        <a class="programs__btn btn btn--main" href="#">
+                          <span>
+                            <svg aria-label="Перейти на сайт" focusable="false" width="10" height="10">
+                              <use href="__spritemap#sprite-link"></use>
+                            </svg>
+                          </span>
+                        </a>
+                      </div>
+                    </div>
+
+                  </div>
+
+                  <!-- Слайд 1 -->
+                  <div class="programs__slide swiper-slide">
+
+                    <div class="programs__image">
+                      <picture>
+                        <source type="image/webp" media="(max-width: 767px)" srcset="img/programs/mobile/photo-1.webp 1x, img/programs/mobile/photo-1@2x.webp 2x">
+                        <source type="image/webp" media="(max-width: 1439px)" srcset="img/programs/tablet/photo-1.webp 1x, img/programs/tablet/photo-1@2x.webp 2x">
+                        <source type="image/webp" srcset="img/programs/photo-1.webp 1x, img/programs/photo-1@2x.webp 2x">
+
+                        <source type="image/jpg" media="(max-width: 767px)" srcset="img/programs/mobile/photo-1.jpg 1x, img/programs/mobile/photo-1@2x.jpg 2x">
+                        <source type="image/jpg" media="(max-width: 1439px)" srcset="img/programs/tablet/photo-1.jpg 1x, img/programs/tablet/photo-1@2x.jpg 2x">
+                        <img src="img/programs/photo-1.jpg" srcset="img/programs/photo-1@2x.jpg 2x" width="392" height="420" alt="Фотография девушек">
+                      </picture>
+                    </div>
+
+                    <div class="programs__content">
+                      <div class="programs__subtitle">
+                        <h3>Стажировки</h3>
+                      </div>
+
+                      <div class="programs__wrapper">
+                        <div class="programs__text">
+                          <p>
+                            Получите незаменимый опыт работы в крупнейших мировых компаниях.
+                          </p>
+                        </div>
+                        <a class="programs__btn btn btn--main" href="#">
+                          <span>
+                            <svg aria-label="Перейти на сайт" focusable="false" width="10" height="10">
+                              <use href="__spritemap#sprite-link"></use>
+                            </svg>
+                          </span>
+                        </a>
+                      </div>
+                    </div>
+
+                  </div>
+
+                  <!-- Слайд 2 -->
+                  <div class="programs__slide swiper-slide">
+
+                    <div class="programs__image">
+                      <picture>
+                        <source type="image/webp" srcset="img/programs/photo-2.webp 1x, img/programs/photo-2@2x.webp 2x">
+                        <img src="img/programs/photo-2.jpg" srcset="img/programs/photo-2@2x.jpg 2x" width="392" height="420" alt="Фотография молодого человека">
+                      </picture>
+                    </div>
+
+                    <div class="programs__content">
+                      <div class="programs__subtitle">
+                        <h3>Волонтёрство</h3>
+                      </div>
+
+                      <div class="programs__wrapper">
+                        <div class="programs__text">
+                          <p>
+                            Помогайте другим <br class="br-tablet">и развивайте свои лидерские качества.
+                          </p>
+                        </div>
+                        <a class="programs__btn btn btn--main" href="#">
+                          <span>
+                            <svg aria-label="Перейти на сайт" focusable="false" width="10" height="10">
+                              <use href="__spritemap#sprite-link"></use>
+                            </svg>
+                          </span>
+                        </a>
+                      </div>
+                    </div>
+
+                  </div>
+
+                  <!-- Слайд 3 -->
+                  <div class="programs__slide swiper-slide">
+
+                    <div class="programs__image">
+                      <picture>
+                        <source type="image/webp" srcset="img/programs/photo-3.webp 1x, img/programs/photo-3@2x.webp 2x">
+                        <img src="img/programs/photo-3.jpg" srcset="img/programs/photo-3@2x.jpg 2x" width="392" height="420" alt="Молодой человек читает книги">
+                      </picture>
+                    </div>
+
+                    <div class="programs__content">
+                      <div class="programs__subtitle">
+                        <h3>Учёба</h3>
+                      </div>
+
+                      <div class="programs__wrapper">
+                        <div class="programs__text">
+                          <p>
+                            Получите образование и измените своё будущее.
+                          </p>
+                        </div>
+                        <a class="programs__btn btn btn--main" href="#">
+                          <span>
+                            <svg aria-label="Перейти на сайт" focusable="false" width="10" height="10">
+                              <use href="__spritemap#sprite-link"></use>
+                            </svg>
+                          </span>
+                        </a>
+                      </div>
+                    </div>
+
+                  </div>
+
+                  <!-- Слайд 3 -->
+                  <div class="programs__slide swiper-slide">
+
+                    <div class="programs__image">
+                      <picture>
+                        <source type="image/webp" srcset="img/programs/photo-3.webp 1x, img/programs/photo-3@2x.webp 2x">
+                        <img src="img/programs/photo-3.jpg" srcset="img/programs/photo-3@2x.jpg 2x" width="392" height="420" alt="Молодой человек читает книги">
+                      </picture>
+                    </div>
+
+                    <div class="programs__content">
+                      <div class="programs__subtitle">
+                        <h3>Учёба</h3>
+                      </div>
+
+                      <div class="programs__wrapper">
+                        <div class="programs__text">
+                          <p>
+                            Получите образование и измените своё будущее.
+                          </p>
+                        </div>
+                        <a class="programs__btn btn btn--main" href="#">
+                          <span>
+                            <svg aria-label="Перейти на сайт" focusable="false" width="10" height="10">
+                              <use href="__spritemap#sprite-link"></use>
+                            </svg>
+                          </span>
+                        </a>
+                      </div>
+                    </div>
+
+                  </div>
+
+                  <!-- Слайд 2 -->
+                  <div class="programs__slide swiper-slide">
+
+                    <div class="programs__image">
+                      <picture>
+                        <source type="image/webp" srcset="img/programs/photo-2.webp 1x, img/programs/photo-2@2x.webp 2x">
+                        <img src="img/programs/photo-2.jpg" srcset="img/programs/photo-2@2x.jpg 2x" width="392" height="420" alt="Фотография молодого человека">
+                      </picture>
+                    </div>
+
+                    <div class="programs__content">
+                      <div class="programs__subtitle">
+                        <h3>Волонтёрство</h3>
+                      </div>
+
+                      <div class="programs__wrapper">
+                        <div class="programs__text">
+                          <p>
+                            Помогайте другим и развивайте свои лидерские качества.
+                          </p>
+                        </div>
+                        <a class="programs__btn btn btn--main" href="#">
+                          <span>
+                            <svg aria-label="Перейти на сайт" focusable="false" width="10" height="10">
+                              <use href="__spritemap#sprite-link"></use>
+                            </svg>
+                          </span>
+                        </a>
+                      </div>
+                    </div>
+
+                  </div>
+
+                </div>
+
+                <div class="programs__pagination swiper-pagination" data-pagination="programs"></div>
+
+              </div>
+
+              <div class="programs__navigation navigation">
+                <button class="navigation__btn navigation__btn--prev" type="button" data-programs="btn-prev" aria-label="Переключиться на предыдущий слайд">
+
+                    <svg aria-hidden="true" focusable="false" width="12" height="12">
+                      <use href="__spritemap#sprite-arrow-left"></use>
+                    </svg>
+
+                </button>
+
+                <button class="navigation__btn navigation__btn--next" type="button" data-programs="btn-next" aria-label="Переключиться на следующий слайд">
+
+                    <svg aria-hidden="true" focusable="false" width="12" height="12">
+                      <use href="__spritemap#sprite-arrow-left"></use>
+                    </svg>
+
+                </button>
+              </div>
+
+            </div>
 
           </section>
 
