--- a/source/index.html
+++ b/source/index.html
@@ -430,8 +430,9 @@
                           </p>
                         </div>
                         <a class="programs__btn btn btn--main" href="#">
+                          <span class="visually-hidden">Перейти на сайт</span>
                           <span>
-                            <svg aria-label="Перейти на сайт" focusable="false" width="10" height="10">
+                            <svg aria-hidden="true" focusable="false" width="10" height="10">
                               <use href="__spritemap#sprite-link"></use>
                             </svg>
                           </span>
@@ -463,8 +464,9 @@
                           </p>
                         </div>
                         <a class="programs__btn btn btn--main" href="#">
+                          <span class="visually-hidden">Перейти на сайт</span>
                           <span>
-                            <svg aria-label="Перейти на сайт" focusable="false" width="10" height="10">
+                            <svg aria-hidden="true" focusable="false" width="10" height="10">
                               <use href="__spritemap#sprite-link"></use>
                             </svg>
                           </span>
@@ -501,8 +503,9 @@
                           </p>
                         </div>
                         <a class="programs__btn btn btn--main" href="#">
+                          <span class="visually-hidden">Перейти на сайт</span>
                           <span>
-                            <svg aria-label="Перейти на сайт" focusable="false" width="10" height="10">
+                            <svg aria-hidden="true" focusable="false" width="10" height="10">
                               <use href="__spritemap#sprite-link"></use>
                             </svg>
                           </span>
@@ -534,8 +537,9 @@
                           </p>
                         </div>
                         <a class="programs__btn btn btn--main" href="#">
+                          <span class="visually-hidden">Перейти на сайт</span>
                           <span>
-                            <svg aria-label="Перейти на сайт" focusable="false" width="10" height="10">
+                            <svg aria-hidden="true" focusable="false" width="10" height="10">
                               <use href="__spritemap#sprite-link"></use>
                             </svg>
                           </span>
@@ -567,8 +571,9 @@
                           </p>
                         </div>
                         <a class="programs__btn btn btn--main" href="#">
+                          <span class="visually-hidden">Перейти на сайт</span>
                           <span>
-                            <svg aria-label="Перейти на сайт" focusable="false" width="10" height="10">
+                            <svg aria-hidden="true" focusable="false" width="10" height="10">
                               <use href="__spritemap#sprite-link"></use>
                             </svg>
                           </span>
@@ -600,8 +605,9 @@
                           </p>
                         </div>
                         <a class="programs__btn btn btn--main" href="#">
+                          <span class="visually-hidden">Перейти на сайт</span>
                           <span>
-                            <svg aria-label="Перейти на сайт" focusable="false" width="10" height="10">
+                            <svg aria-hidden="true" focusable="false" width="10" height="10">
                               <use href="__spritemap#sprite-link"></use>
                             </svg>
                           </span>
@@ -633,8 +639,9 @@
                           </p>
                         </div>
                         <a class="programs__btn btn btn--main" href="#">
+                          <span class="visually-hidden">Перейти на сайт</span>
                           <span>
-                            <svg aria-label="Перейти на сайт" focusable="false" width="10" height="10">
+                            <svg aria-hidden="true" focusable="false" width="10" height="10">
                               <use href="__spritemap#sprite-link"></use>
                             </svg>
                           </span>
