--- a/source/index.html
+++ b/source/index.html
@@ -1652,21 +1652,19 @@
                       <label for="text">Ваше сообщение</label>
                     </p>
 
-                    <p class="form__group input-group input-group--dark" data-message-base="Выберите свой город"
-                    data-on-input-validate data-required>
-                      <select name="city" id="city" required>
-                        <option value="" label="   "></option>
-                        <option value="Moskow">Москва</option>
-                        <option value="St. Petersburg">Санкт-Петербург</option>
-                        <option value="Nizhny Novgorod">Нижний Новгород</option>
-                        <option value="Rostov-on-Don">Ростов-на-Дону</option>
-                        <option value="Kaluga">Калуга</option>
-                      </select>
-                      <label for="city">Выберите город</label>
-                      <svg aria-hidden="true" focusable="false" width="16" height="16">
-                        <use href="__spritemap#sprite-arrow-down"></use>
-                      </svg>
-                    </p>
+                    <div class="form__group input-group input-group--dark custom-select" data-select="data-select" data-validate-type="select" data-select-value="" data-name="some-name" data-id="select"
+                    data-message-base="Выберите свой город" data-on-input-validate data-required id="select">
+                      <button class="custom-select__button" type="button" aria-label="Выберите одну из опций"><span class="custom-select__text"></span><span class="custom-select__icon"></span></button>
+                      <ul class="custom-select__list" role="listbox">
+                        <li class="custom-select__item" tabindex="0" data-select-value="St. Petersburg" aria-selected="false" role="option">Санкт-Петерберг</li>
+                        <li class="custom-select__item" tabindex="0" data-select-value="Moskow" aria-selected="false" role="option">Москва</li>
+                        <li class="custom-select__item" tabindex="0" data-select-value="St. Petersburg" aria-selected="false" role="option">Санкт-Петерберг</li>
+                        <li class="custom-select__item" tabindex="0" data-select-value="St. Petersburg" aria-selected="false" role="option">Санкт-Петерберг</li>
+                        <li class="custom-select__item" tabindex="0" data-select-value="St. Petersburg" aria-selected="false" role="option">Санкт-Петерберг</li>
+                        <li class="custom-select__item" tabindex="0" data-select-value="St. Petersburg" aria-selected="false" role="option">Санкт-Петерберг</li>
+                      </ul>
+                      <label for="select">Выберите город</label>
+                    </div>
 
                     <p class="form__checkbox checkbox checkbox--dark" data-validate-type="checkbox"
                     data-on-input-validate data-message-base="Нужно поставить галочку" data-required>
@@ -1839,21 +1837,19 @@
                 <label for="modal-phone">Телефон</label>
               </p>
 
-              <p class="form__group input-group" data-message-base="Выберите свой город"
-              data-on-input-validate data-required>
-                <select name="city" id="modal-city" required>
-                  <option value="" label="   "></option>
-                  <option value="Moskow">Москва</option>
-                  <option value="St. Petersburg">Санкт-Петербург</option>
-                  <option value="Nizhny Novgorod">Нижний Новгород</option>
-                  <option value="Rostov-on-Don">Ростов-на-Дону</option>
-                  <option value="Kaluga">Калуга</option>
-                </select>
-                <label for="modal-city">Выберите город</label>
-                <svg aria-hidden="true" focusable="false" width="16" height="16">
-                  <use href="__spritemap#sprite-arrow-down"></use>
-                </svg>
-              </p>
+              <div class="form__group input-group custom-select" data-select="data-select" data-validate-type="select" data-select-value="" data-name="some-name" data-id="select"
+              data-message-base="Выберите свой город" data-on-input-validate data-required id="select">
+                <button class="custom-select__button" type="button" aria-label="Выберите одну из опций"><span class="custom-select__text"></span><span class="custom-select__icon"></span></button>
+                <ul class="custom-select__list" role="listbox">
+                  <li class="custom-select__item" tabindex="0" data-select-value="St. Petersburg" aria-selected="false" role="option">Санкт-Петерберг</li>
+                  <li class="custom-select__item" tabindex="0" data-select-value="Moskow" aria-selected="false" role="option">Москва</li>
+                  <li class="custom-select__item" tabindex="0" data-select-value="St. Petersburg" aria-selected="false" role="option">Санкт-Петерберг</li>
+                  <li class="custom-select__item" tabindex="0" data-select-value="St. Petersburg" aria-selected="false" role="option">Санкт-Петерберг</li>
+                  <li class="custom-select__item" tabindex="0" data-select-value="St. Petersburg" aria-selected="false" role="option">Санкт-Петерберг</li>
+                  <li class="custom-select__item" tabindex="0" data-select-value="St. Petersburg" aria-selected="false" role="option">Санкт-Петерберг</li>
+                </ul>
+                <label for="select">Выберите город</label>
+              </div>
 
               <p class="form__checkbox checkbox" data-validate-type="checkbox"
               data-on-input-validate data-message-base="Нужно поставить галочку" data-required>
